# EF-GDM-G6

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  config.yaml  config.yaml.bak  docker-compose.yml  especificaciones_dashboards_nyc_tlc.md  main.py  optimizacion.md  plan_capa_oro.md  pyproject.toml
.claude/: settings.json
app/client/: __init__.py  download_client.py
app/panel/: _cache.py  audit_reader.py  config_io.py  job_manager.py  mart_reader.py  ml_reader.py
app/pipeline/: bronze.py  gold.py  silver.py  star.py
app/pipeline/gold/: gold_pipeline.py  mart_builder.py
app/pipeline/gold_impl/: mart_builder.py  pipeline.py
app/pipeline/silver_impl/: __init__.py  cleaner.py  pipeline.py  star.py
app/profiling/: dataset_profiler.py  profiling_pipeline.py  reporter.py
app/profiling/dimensions/: accuracy.py  base.py  completeness.py  consistency.py  integrity.py  reasonableness.py  timeliness.py  uniqueness.py  validity.py
app/profiling/rules/: amount_components.py  nullability.py  reasonableness_ranges.py
app/profiling/schemas/: profiling_schema.py
app/schemas/: settings_schema.py
app/serving/: app.py  merged_view.py  query_engine.py  schemas.py
app/serving/routes/: admin.py  health.py  historic.py  panel.py  realtime.py
app/speed/: aggregation.py  event_processor.py  fraud_scorer.py  ingest.py  ml_state.py  pubsub.py  redis_client.py  schema.py  trip_profiler.py  zone_lookup.py
app/utils/: globals.py  logger.py  settings.py  spark.py  storage.py
dags/: _common.py  dag_01_bronze.py  dag_02_silver_quality.py  dag_03_silver_schema.py  dag_04_silver_load.py  dag_05_gold.py  dag_06_profiling.py  dag_07_gold_ml.py  dag_08_serving.py
docs/: ARQUITECTURA.md  CLI.md  CONFIG.md  INSTALACION.md  panel.md  verificacion_s3_commit.md
docs/reportes/: ml_metrics_report.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/geo/: README.md  boroughs.geojson
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AbcXyzDashboard.tsx  AuditFlowNodes.tsx  ChartCard.tsx  ClusterPanel.tsx  DataTable.tsx  DemandVolumeDashboard.tsx  FinancialPerformanceDashboard.tsx  FraudPanel.tsx  IngestForm.tsx  IsolationViewer.tsx  JobLogViewer.tsx  KmodesViewer.tsx  Layout.tsx  MartExplorer.tsx  OperationalProfileDashboard.tsx  RealtimeDashboard.tsx  SarimaxViewer.tsx  SummaryCard.tsx  SupplyDemandDashboard.tsx  TippingBehaviorDashboard.tsx
frontend/src/hooks/: useJobs.ts  useRealtimeStream.ts  useSpeedState.ts
frontend/src/lib/: api.ts  realtimeViews.ts  tripTemplates.ts  (+1 more)
notebooks/: 01_exploracion_datos.ipynb  03_capa_gold.ipynb  04_auditoria.ipynb  revision_01_bronze.ipynb  revision_02_profiling.ipynb  revision_03_silver copy.ipynb  revision_03_silver.ipynb  revision_04_gold copy.ipynb  revision_04_gold.ipynb  revision_05_auditoria.ipynb
powerbi/: Dashboards.txt  medidas.dax  tema_nyc_tlc.json
scripts/: copy_model_metadata.py  export_audit_powerbi.py  export_powerbi.py
tests/: conftest.py  helpers.py
tests/integration/: conftest.py  test_pipeline_e2e.py  test_serving_e2e.py
tests/spark/: test_gold_dimensions.py  test_gold_marts.py  test_ml_models.py  test_silver_cleaner.py  test_star_schema.py
tests/unit/: test_audit_lineage.py  test_config_io.py  test_feature_rules.py  test_rules_amount_components.py  test_rules_nullability.py  test_rules_reasonableness.py  test_serving_app.py  test_serving_merged_view.py  test_serving_query_engine.py  test_serving_routes.py  test_serving_sse.py  test_settings_schema.py  test_speed_aggregation.py  test_speed_event_processor.py  test_speed_fraud_scorer.py  test_speed_ingest.py  test_speed_model_loader.py  test_speed_redis_keys.py  test_speed_trip_profiler.py  test_speed_zone_lookup.py
(+36 files in other folders)
