[project]
name = "ef-gdm-g6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "joblib>=1.4.0",
    "kmodes>=0.12.2",
    "pandas>=3.0.3",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end pipeline runs (slower)",
  "spark: requires a real SparkSession",
]
