[project]
name = "ef-gdm-g6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "joblib>=1.4.0",
    "kmodes>=0.12.2",
    "pandas>=3.0.3",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
# STORAGE_BACKEND=s3: s3fs (fsspec) es el cliente que usan app/utils/storage.py
# (S3Path), pandas.to_parquet/read_parquet y Polars para rutas s3://. Spark usa
# su propio conector hadoop-aws (via spark.jars.packages en SparkClient), no
# depende de este extra. Instalar con: uv sync --extra s3
s3 = [
    "s3fs>=2024.10.0",
]
# Servicio jupyter del docker-compose: notebooks/revision_*.ipynb como
# documentacion viva. ipykernel (arriba) ya cubre el kernel; jupyterlab es el
# servidor/UI. Instalar con: uv sync --extra jupyter
jupyter = [
    "jupyterlab>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end pipeline runs (slower)",
  "spark: requires a real SparkSession",
]
