[project]
name = "ef-gdm-g6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "joblib>=1.4.0",
    "kmodes>=0.12.2",
    "pandas>=3.0.3",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.5.0",
    "sse-starlette>=3.4.5",
    "statsmodels>=0.14.0",
    "uvicorn>=0.51.0",
    "websockets>=16.1",
    "xxhash>=3.8.1",
]

[project.optional-dependencies]
# STORAGE_BACKEND=s3: s3fs (fsspec) es el cliente que usan app/utils/storage.py
# (S3Path), pandas.to_parquet/read_parquet y Polars para rutas s3://. Spark usa
# su propio conector hadoop-aws (via spark.jars.packages en SparkClient), no
# depende de este extra. Instalar con: uv sync --extra s3
s3 = [
    "s3fs>=2024.10.0",
]
# Servicio jupyter del docker-compose: notebooks/revision_*.ipynb como
# documentacion viva. ipykernel (arriba) ya cubre el kernel; jupyterlab es el
# servidor/UI. Instalar con: uv sync --extra jupyter
jupyter = [
    "jupyterlab>=4.2.0",
]
# Capa serving (FastAPI + Speed): expone marts gold via HTTP/SSE y procesa en
# tiempo real viajes individuales (Redis + xxhash para parity con Spark).
# Instalar con: uv sync --extra serving
serving = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "redis>=5.2.0",
    "xxhash>=3.5.0",
    "sse-starlette>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
  "integration: end-to-end pipeline runs (slower)",
  "spark: requires a real SparkSession",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25.0",
    "fakeredis[lua]>=2.26.0",
]
